# LegalLens_ZenAI

./: .eslintignore  .gitignore  LICENSE  README.md  SECURITY.md  commit.ps1  package-lock.json  package.json  phase.md  test_ai_validator.ts
.agents/: AGENT_GUIDE.md  AI_GIT_WORKFLOWS.md  AI_USAGE_POLICY.md
.github/workflows/: deploy-agent.yml  python-tests.yml  test.yml
UI_wireframe/: README.md  index.html
UI_wireframe/plans/: create-a-sleek-dark-mode-federated-sifakis.md
agent/: Dockerfile  package-lock.json  package.json  server.ts
agent/contract_auditor_agent/: Dockerfile  agent.py  main.py  pyproject.toml  server.py
agent/contract_auditor_agent/tests/: test_security.py
ai-logs/: week-06.md
docs/: 10weeks.md  AI_FEATURE_PROPOSAL.md  AI_FEATURE_TEST.md  AI_SAFETY_REVIEW.md  API_REFERENCE.md  DATA_MODEL.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  GITHUB_ISSUES.md  PROMPTS.md  REQUIREMENTS.md  SECURITY.md  SETUP_GUIDE.md  TECHNICAL_DEBT.md  TEST_PLAN.md  UX_PROTOTYPE.md  architecture.md  data-model.md  deploy.md  review-notes-week-06.md  test-result-week-06.md
docs/AI-docs/: AI_FEATURE_DESIGN.md  KAGGLE_CAPSTONE_INFO.md
docs/Activities-on-class/: 1-PRODUCT_THINKING.md  2-PRODUCT_VS_PROJECT.md
docs/Product_docs/: 5-PROTOTYPE.md  6-AI_WORKFLOW.md  PRODUCT_ANALYSIS.md  PRODUCT_DIRECTION.md
docs/ai-logs/: week-01.md  week-02.md  week-03.md  week-04.md  week-05.md  week-07.md  week-08.md  week-09.md
src/app/: globals.css  layout.tsx
src/components/: AIChatInterface.tsx  App.tsx  BrutalistApp.tsx  ContractViewer.tsx  (+7 more)
supabase/: supabase_setup.sql
(+32 files in other folders)
